<resources>
    <string name="app_name">Horario de DICIS</string>
    <string name="strHorario">HORARIO</string>
    <string name="strPersonalizar">PERSONALIZAR</string>
    <string name="strActualizar">ACTUALIZAR</string>
    <string name="strCambiarCarrera">CARRERA</string>
    <string name="imageEscudo">imgEscudo</string>
    <string name="dropDowCarrera">dropDowCarrera</string>
    <string name="carrera">¿Cuál es tu carrera?</string>
    <string name="next">Siguiente</string>
    <string name="APIkey">AIzaSyDOoiSTEDYLhTf7i2RnJy5DzeWTSqOFhUs</string>
    <string name="horas_sem">Hrs/Sem</string>
    <string name="unidad_de_aprendizaje">Unidad de Aprendizaje</string>
    <string name="area_de_la_uda">Area de la UDA</string>
    <string name="clave">Clave</string>
    <string name="lun">Lun</string>
    <string name="mar">Mar</string>
    <string name="mie">Mie</string>
    <string name="jue">Jue</string>
    <string name="vie">Vie</string>
    <string name="sab">Sab</string>
    <string name="aula">Aula</string>
    <string name="grupo">Grupo</string>
    <string name="profesor">Profesor</string>
    <string name="loading">Buscando el horario más actual…</string>
    <string name="titleHorario">Horario de DICIS</string>
    <string name="titlePersonalizar">Personalizar Horario</string>
    <string name="anadircurso">Añadir curso</string>
    <string name="add">Agregar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="addtolist">Añadir a la Lista</string>
    <string name="vacio">Vacío</string>
    <string name="generatePDF">Generar PDF</string>
    <string name="barButtom">button bar</string>
    <string name="open_with">Abrir con: </string>
    <string name="share_with">Compartir usando:</string>
    <string name="error_permissionWrite">La aplicación no tiene los permisos necesarios para guardar el PDF, verifique los permisos en Ajustes -> Aplicaciones</string>
    <string name="error_permissionOpen">La aplicación no tiene los permisos necesarios para compartir el PDF, verifique los permisos en Ajustes -> Aplicaciones</string>
    <string name="error_no_internet">No hay conexión a internet, el horario mostrado puede no ser el mas actualizado, le sugerimos conectarse a internet</string>
    <string name="error_no_item">No se han agregado cursos a la lista</string>
    <string name="error_repeat_item">El curso seleccionado ya ha sido agregado previamente</string>
</resources>
