<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".HorarioActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btHBack"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/btback"
            android:gravity="center_vertical|center"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tbxTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/titleHorario"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btPDF"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/btpdf"
            android:gravity="center_vertical|center"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btShare"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btshare"
            android:gravity="center_vertical|center" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorOrange"
        android:scrollbars="none"
        android:showDividers="middle">

        <TextView
            android:id="@+id/tbxHoraSem"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:singleLine="false"
            android:text="@string/horas_sem"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tbxUnidadAprendizaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unidad_de_aprendizaje"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tbxAreaUDA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area_de_la_uda"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tbxClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clave"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tbxLun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/lun"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tbxMar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/mar"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tbxMie"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/mie"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tbxJue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/jue"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tbxVie"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/vie"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tbxSab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/sab"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tbxAula"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/aula"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tbxProfesor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/profesor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/listViewCursos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp">
        </ListView>

        <ProgressBar
            android:id="@+id/pbWait"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>