<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".CarreraChooseActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="129dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="382dp"
        android:contentDescription="@string/imageEscudo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/escudoug" />

    <Spinner
        android:id="@+id/ddCarrera"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="222dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/dropDowCarrera"
        android:spinnerMode="dropdown"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="266dp"
        android:text="@string/carrera"
        android:textColor="@color/colorWhite"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="62dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>