<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgruondhdpi"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="129dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imageEscudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/escudohdpi" />

    <Button
        android:id="@+id/btHorario"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        android:background="@drawable/bthorariohdpi"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="2dp"
        android:text="@string/strHorario"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btPersonalizar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btpersonalizarhdpi"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="2dp"
        android:text="@string/strPersonalizar"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btHorario"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>