<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgruondhdpi"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btBack"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btback"
            android:gravity="center_vertical|center"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tbxTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/addtolist"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btAddItem"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btadd"
            android:gravity="center_vertical|center" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorOrange"
        android:orientation="horizontal"
        android:scrollbars="none"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCheck"
                android:layout_width="20dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/empty"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stbxUnidadAprendizaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unidad_de_aprendizaje"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stbxAreaUDA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area_de_la_uda"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/stbxClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clave"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/stbxGrupo"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/aula"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/stbxProfesor"
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/profesor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewSearchCursos"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoiceModal"
        android:clickable="true"
        android:focusable="true">

    </ListView>

</LinearLayout>